--- a/PointingParty.Client/Pages/Game.razor
+++ b/PointingParty.Client/Pages/Game.razor
@@ -13,7 +13,7 @@
 
 @if (GameContext.Game is not null)
 {
-    <GameUi GameContext="@GameContext" Status="@GameContext.Status"/>
+    <GameUi GameContext="@GameContext" />
 }
 else
 {
