--- a/PointingParty.Client/VoteButton.razor
+++ b/PointingParty.Client/VoteButton.razor
@@ -27,11 +27,11 @@
     private string ClassString()
     {
         var primaryColor = Color.ToString().ToLower();
-        var str = new StringBuilder("text-2xl px-4 inline-flex justify-center items-center gap-2 rounded-md focus:outline-none focus:ring-2 transition-all ");
+        var str = new StringBuilder("text-2xl px-4 inline-flex justify-center items-center gap-2 rounded-md focus:outline-none focus:ring-2 transition-all duration-75 ");
 
         if (Selected)
         {
-            str.Append($"py-3 lg:py-7 border-4 border-{primaryColor}-200 text-{primaryColor}-500 focus:outline-none focus:ring-2 focus:ring-{primaryColor}-200 focus:ring-offset-2 transition-all ");
+            str.Append($"py-3 lg:py-7 border-4 border-{primaryColor}-200 text-{primaryColor}-500 focus:outline-none focus:ring-2 focus:ring-{primaryColor}-200 focus:ring-offset-2 ");
             str.Append(
                 Color switch
                 {
