--- a/PointingParty/Components/App.razor
+++ b/PointingParty/Components/App.razor
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <base href="/"/>
     <link rel="stylesheet" href="app.min.css"/>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    
     <HeadOutlet/>
 </head>
 
