--- a/PointingParty/Components/App.razor
+++ b/PointingParty/Components/App.razor
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <base href="/"/>
     <link rel="stylesheet" href="@Assets["app.min.css"]" />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="48x48" />
+    <link rel="shortcut icon" href="/favicon.ico" sizes="any">
+
     <HeadOutlet/>
 </head>
 
-<body class="bg-gray-50 dark:bg-gray-800">
+<body class="dark:bg-neutral-900">
 <Routes/>
 <script src="_framework/blazor.web.js"></script>
 </body>
