Restructure Client project
Move Razor components into a Components folder

--- a/PointingParty/Components/Routes.razor
+++ b/PointingParty/Components/Routes.razor
@@ -1,5 +1,5 @@
 ﻿@using PointingParty.Components.Layout
-<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
+<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client.Components._Imports).Assembly }">
     <Found Context="routeData">
         <RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)"/>
         <FocusOnNavigate RouteData="routeData" Selector="h1"/>
