--- a/PointingParty.Client/Components/_Imports.razor
+++ b/PointingParty.Client/Components/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using PointingParty.Client
+@using PointingParty.Client.Components
