Fix start game button

--- a/PointingParty/Components/Pages/Home.razor
+++ b/PointingParty/Components/Pages/Home.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @using System.ComponentModel.DataAnnotations
+@using PointingParty.Client.Components
 @inject NavigationManager NavManager
 
 <PageTitle>Pointing Party</PageTitle>
