Fix build by using Debian images; finish .NET 10 upgrade

--- a/PointingParty/Components/App.razor
+++ b/PointingParty/Components/App.razor
@@ -15,7 +15,7 @@
 
 <body class="dark:bg-neutral-900">
 <Routes/>
-<script src="_framework/blazor.web.js"></script>
+<script src="@Assets["_framework/blazor.web.js"]"></script>
 </body>
 
 </html>
