Update App.razor for .NET 10

--- a/PointingParty/Components/App.razor
+++ b/PointingParty/Components/App.razor
@@ -5,9 +5,11 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <base href="/"/>
+    <ResourcePreloader />
     <link rel="stylesheet" href="@Assets["app.min.css"]" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" sizes="48x48" />
+    <ImportMap />
     <link rel="shortcut icon" href="/favicon.ico" sizes="any">
 
     <HeadOutlet/>
