--- a/PointingParty.Client/Components/ScoreGraph.razor
+++ b/PointingParty.Client/Components/ScoreGraph.razor
@@ -1,62 +1,69 @@
 @using System.Collections.Immutable
-@using ApexCharts
 @using PointingParty.Domain
-<ApexChart TItem="ChartData" Title="VOTE DISTRIBUTION" Options="_chartOptions">
-    <ApexPointSeries TItem="ChartData"
-                     Items="Data"
-                     Name="Votes"
-                     SeriesType="SeriesType.Bar"
-                     XValue="@(e => e.Vote.Status == VoteStatus.Pending ? "No vote" : e.Vote.ToString())"
-                     YValue="e => e.Frequency"
-                     PointColor="e => BarColor(e.Vote)"/>
-</ApexChart>
+@using Syncfusion.Blazor.Charts
+@using System.Linq
+
+<SfChart @key="@_lastUpdate" EnableAutoIntervalOnBothAxis="false" Height="276px">
+    <ChartArea><ChartAreaBorder Width="0"></ChartAreaBorder></ChartArea>
+
+    <ChartPrimaryXAxis Interval="1" ValueType="Syncfusion.Blazor.Charts.ValueType.Category">
+        <ChartAxisMajorGridLines Width="0"></ChartAxisMajorGridLines>
+        <ChartAxisMajorTickLines Width="0"></ChartAxisMajorTickLines>
+        <ChartAxisLabelStyle FontFamily="@FontFamily" />
+    </ChartPrimaryXAxis>
+    <ChartPrimaryYAxis Minimum="0" Maximum="@Math.Max(PlayerVotes.Count, 3)" Interval="1" RangePadding="ChartRangePadding.Normal">
+        <ChartAxisLabelStyle FontFamily="@FontFamily" />
+    </ChartPrimaryYAxis>
+
+    <ChartSeriesCollection>
+        <ChartSeries DataSource="@Data"
+                     XName="Vote"
+                     YName="Frequency"
+                     Type="ChartSeriesType.Bar"
+                     PointColorMapping="Color">
+            <ChartSeriesAnimation Enable="true" Duration="1000" Delay="0"></ChartSeriesAnimation>
+            <ChartMarker>
+                <ChartDataLabel Visible="true">
+                    <ChartDataLabelFont FontFamily="@FontFamily"></ChartDataLabelFont>
+                </ChartDataLabel>
+            </ChartMarker>
+        </ChartSeries>
+    </ChartSeriesCollection>
+</SfChart>
 
 @code {
     private const string HighScoreColor = "#5047E5";
     private const string LowScoreColor = "#2664EB";
     private const string DefaultColor = "#6B7280";
 
+    private const string FontFamily = "ui-sans-serif,system-ui,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji";
+
     [Parameter]
     public IImmutableDictionary<string, Vote> PlayerVotes { get; set; } = ImmutableDictionary<string, Vote>.Empty;
 
     private List<ChartData> Data { get; set; } = [];
+    private long _lastUpdate = DateTimeOffset.UtcNow.ToUnixTimeMilliseconds();
 
-    private readonly ApexChartOptions<ChartData> _chartOptions = new()
+    protected override void OnParametersSet()
     {
-        Title = new Title
+        Data = [];
+        foreach (var group in PlayerVotes.GroupBy(x => x.Value).OrderByDescending(g => g.Key))
         {
-            Style = new TitleStyle { Color = DefaultColor, FontWeight = "normal" }
-        },
-        Chart = new Chart
-        {
-            Toolbar = new Toolbar
-            {
-                Show = false
-            }
-        },
-        PlotOptions = new PlotOptions
-        {
-            Bar = new PlotOptionsBar
-            {
-                Horizontal = true
-            }
-        },
-        Yaxis = [new YAxis { Max = 5, DecimalsInFloat = 0 }]
-    };
-
-    protected override void OnInitialized()
-    {
-        foreach (var group in PlayerVotes.GroupBy(x => x.Value).OrderBy(g => g.Key))
-        {
-            Data.Add(new ChartData { Vote = group.Key, Frequency = group.Count() });
-
-            if (group.Count() > (int)_chartOptions.Yaxis[0].Max)
-            {
-                _chartOptions.Yaxis[0].Max = group.Count();
-            }
+            Data.Add(new ChartData(
+                 group.Key.ToString(),
+                 group.Count(),
+                 BarColor(group.Key)
+          ));
         }
-    }
 
+        // Only trigger animation if more than 1 second has passed since last update
+        var now = DateTimeOffset.UtcNow.ToUnixTimeMilliseconds();
+        if (now - _lastUpdate > 1000)
+        {
+           _lastUpdate = now;
+        }
+
+    }
 
     private static string BarColor(Vote vote)
     {
@@ -68,10 +75,5 @@
         return DefaultColor;
     }
 
-    public class ChartData
-    {
-        public Vote Vote { get; set; }
-        public int Frequency { get; set; }
-    }
-
+    public record ChartData(string Vote, int Frequency, string Color);
 }
