--- a/PointingParty/Components/App.razor
+++ b/PointingParty/Components/App.razor
@@ -18,6 +18,7 @@
 <body class="dark:bg-neutral-900">
 <Routes/>
 <script src="@Assets["_framework/blazor.web.js"]"></script>
+<script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </body>
 
 </html>
